--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 <body>
   <main>
     <article class="card card__first">
-      <section class="card__first--heading flex flex-ai-c">
+      <header class="card__first--heading flex flex-ai-c">
         <img src="images/image-daniel.jpg" alt="">
         <div class="flex flex-fd-col">
           <p>Daniel Clifford</p>
           <p>Verified Graduate</p>
         </div>
-      </section>
+      </header>
       <h1>I received a job offer mid-course, and the subjects I learned
         were current, if not more so,
         in the company I joined. I honestly feel I got every penny’s worth.</h1>
@@ -40,13 +40,13 @@
     </article>
 
     <article class="card card__second">
-      <section class="card__second--heading flex flex-ai-c">
+      <header class="card__second--heading flex flex-ai-c">
         <img src="images/image-jonathan.jpg" alt="">
         <div class="flex flex-fd-col">
           <p>Jonathan Walters</p>
           <p>Verified Graduate</p>
         </div>
-      </section>
+      </header>
       <h1>The team was very supportive and kept me motivated</h1>
       <p>
         “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer
@@ -55,13 +55,13 @@
     </article>
 
     <article class="card card__third">
-      <section class="card__third--heading flex flex-ai-c">
+      <header class="card__third--heading flex flex-ai-c">
         <img src="images/image-jeanette.jpg" alt="">
         <div class="flex flex-fd-col">
           <p>Jeanette Harmon</p>
           <p>Verified Graduate</p>
         </div>
-      </section>
+      </header>
       <h1>An overall wonderful and rewarding experience</h1>
       <p>
         “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living
@@ -70,13 +70,13 @@
     </article>
 
     <article class="card card__fourth">
-      <section class="card__fourth--heading flex flex-ai-c">
+      <header class="card__fourth--heading flex flex-ai-c">
         <img src="images/image-patrick.jpg" alt="">
         <div class="flex flex-fd-col">
           <p>Patrick Abrams</p>
           <p>Verified Graduate</p>
         </div>
-      </section>
+      </header>
 
       <h1>
         Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and
@@ -92,13 +92,13 @@
     </article>
 
     <article class="card card__fifth">
-      <section class="card__fifth--heading flex flex-ai-c">
+      <header class="card__fifth--heading flex flex-ai-c">
         <img src="images/image-kira.jpg" alt="">
         <div class="flex flex-fd-col">
           <p>Kira Whittle</p>
           <p>Verified Graduate</p>
         </div>
-      </section>
+      </header>
 
       <h1>Such a life-changing experience. Highly recommended!</h1>
 
