--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" sizes="32x32" href="app/images/favicon-32x32.png">
 
   <title>Frontend Mentor | Testimonials Grid article</title>
 
-  <link rel="stylesheet" type="text/css" href="dist/css/style.css">
+  <link rel="stylesheet" href="dist/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap"
@@ -21,7 +21,7 @@
   <main>
     <article class="card card__first">
       <header class="card__first--heading flex flex-ai-c">
-        <img src="images/image-daniel.jpg" alt="">
+        <img src="app/images/image-daniel.jpg" alt="">
         <div class="flex flex-fd-col">
           <p>Daniel Clifford</p>
           <p>Verified Graduate</p>
@@ -41,7 +41,7 @@
 
     <article class="card card__second">
       <header class="card__second--heading flex flex-ai-c">
-        <img src="images/image-jonathan.jpg" alt="">
+        <img src="app/images/image-jonathan.jpg" alt="">
         <div class="flex flex-fd-col">
           <p>Jonathan Walters</p>
           <p>Verified Graduate</p>
@@ -56,7 +56,7 @@
 
     <article class="card card__third">
       <header class="card__third--heading flex flex-ai-c">
-        <img src="images/image-jeanette.jpg" alt="">
+        <img src="app/images/image-jeanette.jpg" alt="">
         <div class="flex flex-fd-col">
           <p>Jeanette Harmon</p>
           <p>Verified Graduate</p>
@@ -71,7 +71,7 @@
 
     <article class="card card__fourth">
       <header class="card__fourth--heading flex flex-ai-c">
-        <img src="images/image-patrick.jpg" alt="">
+        <img src="app/images/image-patrick.jpg" alt="">
         <div class="flex flex-fd-col">
           <p>Patrick Abrams</p>
           <p>Verified Graduate</p>
@@ -93,7 +93,7 @@
 
     <article class="card card__fifth">
       <header class="card__fifth--heading flex flex-ai-c">
-        <img src="images/image-kira.jpg" alt="">
+        <img src="app/images/image-kira.jpg" alt="">
         <div class="flex flex-fd-col">
           <p>Kira Whittle</p>
           <p>Verified Graduate</p>
@@ -118,7 +118,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/lancemartija">Lance Martija</a>.
     </div>
   </footer>
 </body>
