add container class to main

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <main>
+  <main class="main main__container">
     <article class="card card__first">
       <header class="card__first--heading flex flex-ai-c">
         <img src="app/images/image-daniel.jpg" alt="">
