--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://github.com/lancemartija">Lance Martija</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/lancemartija">Lance Martija</a>.
     </div>
   </footer>
 </body>
